--- a/web/src/components/Post.module.css
+++ b/web/src/components/Post.module.css
@@ -20,6 +20,11 @@
   margin-bottom: 16pt;
   color: var(--color-blue);
   font-weight: 700;
+  background-color: #f9f9f9;
+  border-bottom: 1pt solid var(--color-lightGray);
+  position: relative;
+  display: flex;
+  flex-direction: row;
 }
 .content {
   flex-grow: 1;
@@ -32,14 +37,6 @@
   color: var(--color-darkGray);
 }
 
-.footer {
-  position: relative;
-  margin-top: 5pt;
-  background-color: #f9f9f9;
-  padding: 7pt 20pt;
-  border-radius: 0 0 10pt 10pt;
-  border-top: 1pt solid var(--color-lightGray);
-}
 .address {
   font-style: normal;
   display: inline;
@@ -47,7 +44,6 @@
 
 .icon {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 10pt;
-  transform: translateY(-100%);
 }
