--- a/web/src/index.css
+++ b/web/src/index.css
@@ -14,6 +14,7 @@ body {
   font-family: Montserrat;
   font-size: 16pt;
   color: var(--color-darkGray);
+  background-color: white;
 }
 a {
   text-decoration: none;
