--- a/web/src/components/buttonStyles.module.css
+++ b/web/src/components/buttonStyles.module.css
@@ -12,7 +12,10 @@
   box-shadow: 0 2pt 4pt #00000014;
   border: 1pt solid var(--color-lightGray);
   transition: 0.3s;
+  margin-right: 20pt;
+  width:274pt;
   padding: 15pt 30pt;
+
   &:hover {
     background-color: #f9f9f9;
   }
