--- a/web/src/components/Post/PostOverview.module.css
+++ b/web/src/components/Post/PostOverview.module.css
@@ -41,3 +41,13 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 700px) {
+  .content {
+    flex-direction: column;
+  }
+  .image {
+    width: 50%;
+    margin: auto;
+  }
+}
