--- a/web/src/components/Section.module.css
+++ b/web/src/components/Section.module.css
@@ -9,3 +9,12 @@
 .sectionRow {
   flex-direction: row;
 }
+
+@media screen and (max-width: 700px) {
+  .section {
+    padding: 15pt 30pt;
+  }
+  .sectionRow {
+    flex-direction: column;
+  }
+}
