--- a/web/src/components/User/UserOverview.module.css
+++ b/web/src/components/User/UserOverview.module.css
@@ -58,3 +58,13 @@
 .ledRed {
   background-color: var(--color-darkGray);
 }
+
+@media screen and (max-width: 700px) {
+  .content {
+    flex-direction: column;
+  }
+  .image {
+    width: 50%;
+    margin: auto;
+  }
+}
