--- a/web/src/components/Navbar.module.css
+++ b/web/src/components/Navbar.module.css
@@ -30,6 +30,7 @@
 @media screen and (max-width: 700px) {
   .nav {
     flex-direction: column;
+    gap: 15pt;
   }
   .logo {
     align-self: flex-start;
@@ -38,5 +39,7 @@
     width: 100%;
     align-items: flex-end;
     justify-content: flex-end;
+    flex-direction: column;
+    gap: 5pt;
   }
 }
